# memory-hacking-alles-legal-

./: CMakeLists.txt  main.cpp
src/: gui_main.cpp  memory_scanner.cpp  memory_scanner.h  process_utils.cpp  process_utils.h
